tests/error/template_n_mismatch.gw
// [contains] template type number mismatch
template <{i}>
function void test(){}
function void test(int i){}

test<{int, float, int}>();
//test<{int}>();
